crates/test-ui/ui/not_writeback.stderr
error[E0277]: the trait bound `Retained<NSObject>: RefEncode` is not satisfied
 --> ui/not_writeback.rs
  |
  |     let _: &mut Retained<NSObject> = unsafe { msg_send![obj, a] };
  |                                               ^^^^^^^^^^^^^^^^^ the trait `RefEncode` is not implemented for `Retained<NSObject>`
  |
  = help: the following other types implement trait `RefEncode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AnyClass
            AnyObject
            AnyProtocol
            AtomicI16
          and $N others
  = note: required for `&mut Retained<NSObject>` to implement `Encode`
  = note: required for `&mut Retained<NSObject>` to implement `EncodeReturn`
  = note: required for `&mut Retained<NSObject>` to implement `ConvertReturn<MethodFamily<6>>`
  = note: required for `MethodFamily<6>` to implement `RetainSemantics<*const NSObject, &mut Retained<NSObject>, KindSendMessage>`
  = note: 1 redundant requirement hidden
  = note: required for `MethodFamily<6>` to implement `RetainSemantics<&Retained<NSObject>, &mut Retained<NSObject>, KindSendMessage>`
  = note: required for `MethodFamily<6>` to implement `MsgSend<&Retained<NSObject>, &mut Retained<NSObject>>`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Retained<NSObject>: Encode` is not satisfied
 --> ui/not_writeback.rs
  |
  |     let _: () = unsafe { msg_send![obj, a: param] };
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^
  |                          |
  |                          the trait `Encode` is not implemented for `Retained<NSObject>`
  |                          required by a bound introduced by this call
  |
  = help: the following other types implement trait `Encode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AtomicI16
            AtomicI32
            AtomicI64
            AtomicI8
          and $N others
  = note: required for `Retained<NSObject>` to implement `EncodeArgument`
  = note: required for `Retained<NSObject>` to implement `ConvertArgument`
  = note: required for `(Retained<NSObject>,)` to implement `ConvertArguments`
note: required by a bound in `MsgSend::send_message`
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/msg_send_retained.rs
  |
  |     unsafe fn send_message<A: ConvertArguments>(receiver: Receiver, sel: Sel, args: A) -> Return;
  |                               ^^^^^^^^^^^^^^^^ required by this bound in `MsgSend::send_message`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Retained<NSObject>: RefEncode` is not satisfied
 --> ui/not_writeback.rs
  |
  |     let _: () = unsafe { msg_send![obj, a: &param] };
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^
  |                          |
  |                          the trait `RefEncode` is not implemented for `Retained<NSObject>`
  |                          required by a bound introduced by this call
  |
  = help: the following other types implement trait `RefEncode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AnyClass
            AnyObject
            AnyProtocol
            AtomicI16
          and $N others
  = note: required for `&Retained<NSObject>` to implement `Encode`
  = note: required for `&Retained<NSObject>` to implement `EncodeArgument`
  = note: required for `&Retained<NSObject>` to implement `ConvertArgument`
  = note: required for `(&Retained<NSObject>,)` to implement `ConvertArguments`
note: required by a bound in `MsgSend::send_message`
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/msg_send_retained.rs
  |
  |     unsafe fn send_message<A: ConvertArguments>(receiver: Receiver, sel: Sel, args: A) -> Return;
  |                               ^^^^^^^^^^^^^^^^ required by this bound in `MsgSend::send_message`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Retained<NSObject>: RefEncode` is not satisfied
 --> ui/not_writeback.rs
  |
  |     let _: () = unsafe { msg_send![obj, a: Some(&param)] };
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |                          |
  |                          the trait `RefEncode` is not implemented for `Retained<NSObject>`
  |                          required by a bound introduced by this call
  |
  = help: the following other types implement trait `RefEncode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AnyClass
            AnyObject
            AnyProtocol
            AtomicI16
          and $N others
  = note: required for `&Retained<NSObject>` to implement `Encode`
  = note: 1 redundant requirement hidden
  = note: required for `Option<&Retained<NSObject>>` to implement `Encode`
  = note: required for `Option<&Retained<NSObject>>` to implement `EncodeArgument`
  = note: required for `Option<&Retained<NSObject>>` to implement `ConvertArgument`
  = note: required for `(Option<&Retained<NSObject>>,)` to implement `ConvertArguments`
note: required by a bound in `MsgSend::send_message`
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/msg_send_retained.rs
  |
  |     unsafe fn send_message<A: ConvertArguments>(receiver: Receiver, sel: Sel, args: A) -> Return;
  |                               ^^^^^^^^^^^^^^^^ required by this bound in `MsgSend::send_message`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Retained<NSObject>: RefEncode` is not satisfied
 --> ui/not_writeback.rs
  |
  |     let _: () = unsafe { msg_send![obj, a: param] };
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^
  |                          |
  |                          the trait `RefEncode` is not implemented for `Retained<NSObject>`
  |                          required by a bound introduced by this call
  |
  = help: the following other types implement trait `RefEncode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AnyClass
            AnyObject
            AnyProtocol
            AtomicI16
          and $N others
  = note: required for `*mut Retained<NSObject>` to implement `Encode`
  = note: required for `*mut Retained<NSObject>` to implement `EncodeArgument`
  = note: required for `*mut Retained<NSObject>` to implement `ConvertArgument`
  = note: required for `(*mut Retained<NSObject>,)` to implement `ConvertArguments`
note: required by a bound in `MsgSend::send_message`
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/msg_send_retained.rs
  |
  |     unsafe fn send_message<A: ConvertArguments>(receiver: Receiver, sel: Sel, args: A) -> Return;
  |                               ^^^^^^^^^^^^^^^^ required by this bound in `MsgSend::send_message`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Retained<NSObject>: RefEncode` is not satisfied
 --> ui/not_writeback.rs
  |
  |     let _: () = unsafe { msg_send![obj, a: param] };
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^
  |                          |
  |                          the trait `RefEncode` is not implemented for `Retained<NSObject>`
  |                          required by a bound introduced by this call
  |
  = help: the following other types implement trait `RefEncode`:
            &'a T
            &'a mut T
            *const T
            *mut T
            AnyClass
            AnyObject
            AnyProtocol
            AtomicI16
          and $N others
  = note: required for `&mut Retained<NSObject>` to implement `RefEncode`
  = note: required for `&mut &mut Retained<NSObject>` to implement `Encode`
  = note: required for `&mut &mut Retained<NSObject>` to implement `EncodeArgument`
  = note: required for `&mut &mut Retained<NSObject>` to implement `ConvertArgument`
  = note: required for `(&mut &mut Retained<NSObject>,)` to implement `ConvertArguments`
note: required by a bound in `MsgSend::send_message`
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/msg_send_retained.rs
  |
  |     unsafe fn send_message<A: ConvertArguments>(receiver: Receiver, sel: Sel, args: A) -> Return;
  |                               ^^^^^^^^^^^^^^^^ required by this bound in `MsgSend::send_message`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)
